--- a/src/app/book-form-template/book-form-template.component.html
+++ b/src/app/book-form-template/book-form-template.component.html
@@ -80,6 +80,8 @@
     </button>
   </div>
 </form>
+
+<!-- Display Input Content Below Button -->
 <div class="row mt-4" *ngIf="isSubmitted">
   <div class="col-xs-12">
     <h3>Thank you for adding:</h3>
