--- a/src/app/book-form-reactive/book-form-reactive.component.html
+++ b/src/app/book-form-reactive/book-form-reactive.component.html
@@ -104,9 +104,10 @@
 <!-- Displays user input below button -->
 <div class="row mt-4" *ngIf="wasSubmitted">
   <div class="col-xs-12">
-    <h3>Thank you for submitting:</h3>
-    <p>Title: {{ reactiveBookForm.value.title }}</p>
-    <p>Author: {{ reactiveBookForm.value.author }}</p>
-    <p>Genre: {{ reactiveBookForm.value.genre }}</p>
+    <h3>Thank you for adding:</h3>
+    <p>Title: {{ inputDetails.title }}</p>
+    <p>Author: {{ inputDetails.author }}</p>
+    <p>Genre: {{ inputDetails.genre }}</p>
   </div>
 </div>
+
